@@ -1,0 +1,16 @@
+INCLUDES = \
+	@GLIB_CFLAGS@ \
+	@OPENOBEX_CFLAGS@
+
+LDADD = \
+	@GLIB_LIBS@ \
+	@OPENOBEX_LIBS@
+
+libcobexbfb_a_SOURCES = \
+		cobex_bfb.c cobex_bfb.h \
+		bfb.c bfb.h \
+		crc.c crc.h \
+		cobex_t.h
+
+lib_LIBRARIES = libcobexbfb.a
+
