@@ -1,3 +1,7 @@
+2002-02-11  Christian Zuckschwerdt  <zany@triq.net>
+
+	* cobex now capable of asynch operation
+
 2002-02-09  Christian Zuckschwerdt  <zany@triq.net>
 
 	* Rewrote main using getopt.
